--- a/.github/workflows/server_UT.yml
+++ b/.github/workflows/server_UT.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 env:
-  # KRAVI_TECH_TEST: ${{ secrets.KraviTech_Test }}
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
 jobs:
@@ -23,8 +22,7 @@ jobs:
 
       - name: Set up environment variables
         run: |
-          echo "KRAVI_TECH_TEST=${KRAVI_TECH_TEST}" >> $GITHUB_ENV
-          echo "DATABASE_URL=${DATABASE_URL}" >> $GITHUB_ENV  # Add this line
+          echo "DATABASE_URL=${DATABASE_URL}" >> $GITHUB_ENV
 
       - name: Install dependencies
         run: |
@@ -34,3 +32,4 @@ jobs:
       - name: Run tests
         run: |
           pytest server/tests/unit_tests/user_tests_UT.py
+          echo "__test passed!__ ✅" >> $GITHUB_STEP_SUMMARY
