--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,19 +1,3 @@
-// {
-//   "files": [],
-//   "references": [
-//     { "path": "./tsconfig.app.json" },
-//     { "path": "./tsconfig.node.json" }
-//   ],
-//   "compilerOptions": {
-//     "baseUrl": ".",
-//     "paths": {
-//       "@/*": ["./src/*"]
-//     },
-//     "types": ["jest", "@testing-library/jest-dom"]
-//   },
-//   "jsx": "react-jsx"
-// }
-
 {
   "compilerOptions": {
     "target": "ES6",
@@ -30,8 +14,10 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/ui/*": ["node_modules/shadcn-ui/components/*"]
-    }
+    },
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
-  "include": ["src/**/*", "tests/**/*"],
+  "include": ["src/**/*", "tests/**/*", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
