--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,21 @@
 services:
+  web:
+    build:
+      context: client
+    ports:
+      - 5172:5172
+    depends_on:
+      - api
+    environment:
+      - APP_PORT=5172
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+
   api:
     build: ./server
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-    # restart: always
+    restart: always
     volumes:
       - ./server:/app
     ports:
@@ -13,7 +26,7 @@ services:
       DATABASE_NAME: ${DB_NAME:-docker}
       DATABASE_USERNAME: ${DB_USERNAME:-docker}
       DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@db:5432/docker}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@localhost:5433/docker}
       DATABASE_PORT: ${DATABASE_PORT:-5433}
     env_file:
       - ./server/.env
