--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       DATABASE_NAME: ${DB_NAME:-docker}
       DATABASE_USERNAME: ${DB_USERNAME:-docker}
       DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
-      DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@localhost:5433/docker}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@db:5432/docker}
       DATABASE_PORT: ${DATABASE_PORT:-5433}
     env_file:
       - ./server/.env
@@ -39,11 +39,12 @@ services:
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME:-docker}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-1234}
-      POSTGRES_db: ${DB_NAME:-docker}
+      POSTGRES_DB: ${DB_NAME:-docker}
     ports:
-      - target: 5432
-        published: ${DB_PORT:-5433}
-        protocol: tcp
+#      - target: 5432
+#        published: 5433
+#        protocol: tcp
+      - "5433:5432"
     env_file:
       - ./server/.env
 
