--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,13 @@ services:
       - /app/node_modules
 
   api:
-    build: ./server
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    build:
+      context: server
+#    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     restart: always
     volumes:
       - ./server:/app
+      - /app/node_modules
     ports:
       - "8000:8000"
     depends_on:
@@ -29,7 +31,7 @@ services:
       DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@db:5432/docker}
       DATABASE_PORT: ${DATABASE_PORT:-5433}
     env_file:
-      - ./server/.env
+      - server/.env
 
   db:
     image: postgres:14
@@ -46,7 +48,7 @@ services:
 #        protocol: tcp
       - "5433:5432"
     env_file:
-      - ./server/.env
+      - server/.env
 
 volumes:
   postgres_data:
