--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.6",
     "@types/pg": "^8.11.10",
@@ -21,7 +22,9 @@
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
