--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "npx ts-node-dev --poll --respawn --transpile-only app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --runInBand --detectOpenHandles --config tests/jest.config.ts\n"
   },
   "keywords": [],
   "author": "",
@@ -18,12 +18,14 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.8.6",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "jest": "^29.7.0",
     "morgan": "^1.10.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
