--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "npx ts-node-dev --poll --respawn --transpile-only app.ts",
+    "dev": "npx ts-node-dev --poll --respawn --transpile-only -r tsconfig-paths/register app.ts",
     "test": "npx jest --runInBand --detectOpenHandles --config tests/jest.config.ts\n"
   },
   "keywords": [],
@@ -38,6 +38,7 @@
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
