--- a/.github/workflows/server-UT.yml
+++ b/.github/workflows/server-UT.yml
@@ -1,35 +1,57 @@
-name: Unit Tests - Server
+name: Integration Tests - Client
 
 on:
   pull_request:
     branches:
       - main
-env:
-  DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
+
+    services:
+      docker:
+        image: docker:20.10.7
+        options: --privileged
+        ports:
+          - 5433:5433
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          python-version: "3.9"
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-      - name: Set up environment variables
+      - name: Build and start Docker containers
         run: |
-          echo "DATABASE_URL=${DATABASE_URL}" >> $GITHUB_ENV
+          docker-compose -f docker-compose.yml up --build -d
 
-      - name: Install dependencies
+      - name: Wait for services to be ready
         run: |
-          python -m pip install --upgrade pip
-          pip install -r server/requirements.txt
+          # Wait for database to be ready
+          until docker exec api pg_isready -U docker -h db; do
+            echo "Waiting for database..."
+            sleep 2
+          done
+
+      - name: Install dependencies (server and client)
+        run: |
+          docker-compose exec -T api npm install
+          docker-compose exec -T web npm install
 
       - name: Run tests
         run: |
-          pytest server/tests/unit_tests/user_tests_UT.py
-          echo "__test passed!__ ✅" >> $GITHUB_STEP_SUMMARY
+          docker-compose exec -T api npx jest --verbose --detectOpenHandles --config tests/jest.config.ts
+
+      - name: Tear down Docker containers
+        run: |
+          docker-compose down --volumes --remove-orphans
