--- a/.github/workflows/server-UT.yml
+++ b/.github/workflows/server-UT.yml
@@ -20,8 +20,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
+      - name: Set up Docker Buildx and Docker Compose
         uses: docker/setup-buildx-action@v2
+        with:
+          version: 'latest'
 
       - name: Install Docker Compose
         run: |
