updated ignore folder in .eslintrc.yml

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,4 +17,6 @@ settings:
     version: "detect"
 rules:
   react/react-in-jsx-scope: "off"
-  react/prop-types: [2, { ignore: ["className"] }]
+  react/prop-types: [ 2, { ignore: [ "className" ] } ]
+ignorePatterns:
+  - "client/src/components/ui/*"
