--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,14 @@ services:
     build:
       context: client
     ports:
-      - 5172:5172
+      - "5172:5172"
     depends_on:
       - api
     environment:
       - APP_PORT=5172
     volumes:
       - ./client:/app
-      - /app/node_modules
+      - app_node_modules:/app/node_modules
 
   api:
     build:
@@ -18,7 +18,7 @@ services:
     restart: always
     volumes:
       - ./server:/app
-      - /app/node_modules
+      - api_node_modules:/app/node_modules
     ports:
       - "8000:8000"
     depends_on:
@@ -48,3 +48,5 @@ services:
 
 volumes:
   postgres_data:
+  app_node_modules:
+  api_node_modules:
