--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
       DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
       DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@db:5432/docker}
       DATABASE_PORT: ${DATABASE_PORT:-5433}
-    env_file:
-      - server/.env
+  #    env_file:
+  #      - server/.env
 
   db:
     image: postgres:14
@@ -43,8 +43,8 @@ services:
       POSTGRES_DB: ${DB_NAME:-docker}
     ports:
       - "5433:5432"
-    env_file:
-      - server/.env
+#    env_file:
+#      - server/.env
 
 volumes:
   postgres_data:
