--- a/E2E/package.json
+++ b/E2E/package.json
@@ -2,7 +2,10 @@
   "name": "tests",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "delete-user-parallel": "npx playwright test -config=tests/deleteUser/playwright.deleteUser.config.ts",
+    "test": "npx"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -10,5 +13,9 @@
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@types/node": "^22.8.1"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7"
   }
 }
