--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
+    "recharts": "^2.15.0",
     "recoil": "^0.7.7",
     "shadcn-ui": "^0.2.3",
     "sweetalert2": "^11.14.1",
