--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,8 +43,74 @@ services:
       POSTGRES_DB: ${DB_NAME:-docker}
     ports:
       - "5433:5432"
-#    env_file:
-#      - server/.env
+  #    env_file:
+  #      - server/.env
+
+  s3:
+    container_name: s3-local
+    image: localstack/localstack:s3-latest
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${AWS_DEBUG:-0}
+      - SERVICES=s3:4566
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-east-1}
+    volumes:
+      - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    command: [ "python3", "main.py", "--action", "bucket" ]
+#    networks:
+#      - my_network
+#    populate:
+#      depends_on:
+#        s3:
+#          condition: service_healthy
+#      image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
+#      build:
+#        context: ./utils
+#      environment:
+#        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
+#        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
+#        AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+#        AWS_ENDPOINT_URL: http://s3-local:4566
+#        BUCKET_NAME: ${BUCKET_NAME:-data}
+#        IMAGES_DIR: ${IMAGES_DIR:-/aws}
+#      volumes:
+#        - ./assets:/aws
+#      command: [ "python3", "main.py", "--action", "bucket" ]
+#      networks:
+#        - my_network
+#    db_populate:
+#      depends_on:
+#        s3:
+#          condition: service_healthy
+#        db:
+#          condition: service_healthy
+#        populate:
+#          condition: service_completed_successfully
+#      image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
+#      environment:
+#        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
+#        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
+#        AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+#        AWS_ENDPOINT_URL: http://s3-local:4566
+#        BUCKET_NAME: ${BUCKET_NAME:-data}
+#        IMAGES_DIR: ${IMAGES_DIR:-/aws}
+#        DATABASE_NAME: ${DB_NAME:-docker}
+#        DATABASE_USERNAME: ${DB_USERNAME:-docker}
+#        DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
+#        DATABASE_URL: db
+#        DATABASE_PORT: ${DATABASE_PORT:-5432}
+#      command: [ "python3", "main.py", "--action", "db" ]
+#      networks:
+#        - my_network
+#  volumes:
+#    db:
+#      driver: local
 
 volumes:
   postgres_data:
