--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.730.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -40,7 +42,9 @@
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
+    "sharp": "^0.33.5",
     "tsconfig-paths": "^4.2.0"
   }
 }
