--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,11 @@ services:
       POSTGRES_DB: ${DB_NAME:-docker}
     ports:
       - "5433:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   #    env_file:
   #      - server/.env
 
@@ -62,52 +67,53 @@ services:
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+    depends_on:
+      - api
+  #    networks:
+  #      - my_network
+  populate:
+    depends_on:
+      s3:
+        condition: service_healthy
+    image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
+    build:
+      context: server/aws/s3/populate
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
+      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+      AWS_ENDPOINT_URL: http://s3-local:4566
+      BUCKET_NAME: ${BUCKET_NAME:-data}
+      IMAGES_DIR: ${IMAGES_DIR:-/aws}
+    volumes:
+      - ./assets:/aws
     command: [ "python3", "main.py", "--action", "bucket" ]
+  #    networks:
+  #      - my_network
+  db_populate:
+    depends_on:
+      s3:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+      populate:
+        condition: service_completed_successfully
+    image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
+      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+      AWS_ENDPOINT_URL: http://s3-local:4566
+      BUCKET_NAME: ${BUCKET_NAME:-data}
+      IMAGES_DIR: ${IMAGES_DIR:-/aws}
+      DATABASE_NAME: ${DB_NAME:-docker}
+      DATABASE_USERNAME: ${DB_USERNAME:-docker}
+      DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
+      DATABASE_URL: ${DATABASE_URL:-postgresql://docker:1234@db:5432/docker}
+      DATABASE_PORT: ${DATABASE_PORT:-5433}
+    command: [ "python3", "main.py", "--action", "db" ]
 #    networks:
 #      - my_network
-#    populate:
-#      depends_on:
-#        s3:
-#          condition: service_healthy
-#      image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
-#      build:
-#        context: ./utils
-#      environment:
-#        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
-#        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
-#        AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
-#        AWS_ENDPOINT_URL: http://s3-local:4566
-#        BUCKET_NAME: ${BUCKET_NAME:-data}
-#        IMAGES_DIR: ${IMAGES_DIR:-/aws}
-#      volumes:
-#        - ./assets:/aws
-#      command: [ "python3", "main.py", "--action", "bucket" ]
-#      networks:
-#        - my_network
-#    db_populate:
-#      depends_on:
-#        s3:
-#          condition: service_healthy
-#        db:
-#          condition: service_healthy
-#        populate:
-#          condition: service_completed_successfully
-#      image: ghcr.io/ido123ziv/openu-web-develop-20995/populate:latest-dev
-#      environment:
-#        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
-#        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
-#        AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
-#        AWS_ENDPOINT_URL: http://s3-local:4566
-#        BUCKET_NAME: ${BUCKET_NAME:-data}
-#        IMAGES_DIR: ${IMAGES_DIR:-/aws}
-#        DATABASE_NAME: ${DB_NAME:-docker}
-#        DATABASE_USERNAME: ${DB_USERNAME:-docker}
-#        DATABASE_PASSWORD: ${DB_PASSWORD:-1234}
-#        DATABASE_URL: db
-#        DATABASE_PORT: ${DATABASE_PORT:-5432}
-#      command: [ "python3", "main.py", "--action", "db" ]
-#      networks:
-#        - my_network
 #  volumes:
 #    db:
 #      driver: local
