--- a/.github/workflows/signup-E2E.yml
+++ b/.github/workflows/signup-E2E.yml
@@ -22,8 +22,8 @@ jobs:
           docker compose up -d
       - name: wait for api
         run: |
-          if ! curl "http://localhost:8000/healthcheck"; then
-              sleep 5;
+          if ! curl "http://localhost:8000/test/healthcheck"; then
+              exit 1;
           fi
       - name: see containers
         run:
