--- a/.github/workflows/signup-E2E.yml
+++ b/.github/workflows/signup-E2E.yml
@@ -22,8 +22,8 @@ jobs:
           docker compose up -d
       - name: wait for api
         run: |
-          if ! curl "http://localhost:8000/healthcheck"; then
-              sleep 5;
+          if ! curl "http://localhost:8000/test/healthcheck"; then
+              exit 1;
           fi
       - name: see containers
         run:
@@ -41,7 +41,7 @@ jobs:
         working-directory: ./E2E/tests
         run: |
           echo "# Test Results! 🚀" >> $GITHUB_STEP_SUMMARY
-          npx playwright test tests/signup.spec.ts --config=playwright.config.ts || {
+          npx playwright test tests/signup.spec.ts --config=../playwright.config.ts || {
             echo "Signup E2E failed! ❌" >> $GITHUB_STEP_SUMMARY
             exit 1
           }
