--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "http-status-codes": "^2.3.0",
     "lucide-react": "^0.439.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -40,6 +42,7 @@
     "recharts": "^2.15.0",
     "recoil": "^0.7.7",
     "shadcn-ui": "^0.2.3",
+    "sonner": "^1.7.3",
     "sweetalert2": "^11.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
