added task for test user

--- a/server/aws/dynamo/src/tasks.json
+++ b/server/aws/dynamo/src/tasks.json
@@ -123,6 +123,28 @@
           "completed_date": null
         }
       ]
+    },
+    {
+      "menti_id": "4",
+      "mentor_id": "4",
+      "task_id": "12fee533-c3c5-4e5e-81e8-6087dcc4f2e6",
+      "title": "Test Title",
+      "description": "Test Description",
+      "status": "NEW",
+      "created_date": "2021-01-01",
+      "in_progress_date": null,
+      "completed_date": null,
+      "subtasks": [
+        {
+          "id": "ff605e3a-f95e-4522-88a0-fa3960bad81e",
+          "title": "Test Subtask Title",
+          "description": "Test subtask description",
+          "status": "NEW",
+          "created_date": "2021-01-01",
+          "in_progress_date": null,
+          "completed_date": null
+        }
+      ]
     }
   ]
 }
