--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       - "4566:4566"  # Single entry point for all AWS services
     environment:
       - DEBUG=${AWS_DEBUG:-0}
-      - SERVICES=s3,dynamodb,lambda  # Run all services in one container
+      - SERVICES=s3,dynamodb,lambda,sqs  # Run all services in one container
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-east-1}
@@ -128,6 +128,19 @@ services:
       AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
       AWS_ENDPOINT_URL: "http://localstack:4566"
     command: [ "python3", "main.py", "--action", "dynamo" ]
+
+  sqs_populate_admin_notification:
+    depends_on:
+      localstack:
+        condition: service_healthy
+    build:
+      context: server/aws/sqs
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID:-test}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY:-test}
+      AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION:-us-east-1}
+      AWS_ENDPOINT_URL: "http://localstack:4566"
+    command: [ "python3", "main.py", "--action", "admin-notification" ]
 
 volumes:
   postgres_data:
