--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.751.0",
     "@aws-sdk/client-s3": "^3.730.0",
+    "@aws-sdk/client-sqs": "^3.775.0",
     "@aws-sdk/lib-dynamodb": "^3.751.0",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
