--- a/.pylintrc
+++ b/.pylintrc
@@ -451,6 +451,8 @@ disable=raw-checker-failed,
         W0621,  # Redefining name from outer scope (redefined-outer-name)
         R1710,  # Either all return statements in a function should return an expression, or none of them should (inconsistent-return-statements)
         W9011,  # missing-return-type-doc
+        E0401,  # Unable to import
+        R0801,  # Similar lines in %s files
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
