--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,23 +1,38 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "ESNext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx", // Enable JSX support for React
+    "jsx": "react-jsx",
+    // Enable JSX support for React
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "types": ["jest", "@testing-library/jest-dom"],
+    "types": [
+      "jest",
+      "@testing-library/jest-dom"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@components/ui/*": ["node_modules/shadcn-ui/components/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@components/ui/*": [
+        "node_modules/shadcn-ui/components/*"
+      ]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
-  "include": ["src/**/*", "tests/**/*", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "tests/**/*",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
