--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - api
     environment:
       - APP_PORT=5172
+      - VITE_BACKEND_URL=${VITE_BACKEND_URL:-http://localhost:8000}
     volumes:
       - ./client:/app
       - app_node_modules:/app/node_modules
@@ -25,7 +26,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
-      - localstack  # Uses unified LocalStack
+      - localstack
     environment:
       DATABASE_NAME: ${DB_NAME:-docker}
       DATABASE_USERNAME: ${DB_USERNAME:-docker}
