--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
@@ -33,10 +33,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "http-status-codes": "^2.3.0",
     "lucide-react": "^0.439.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
