--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.12.2"
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
